Add more comments on notebook

--- a/Predictive Analytics/Submission/submission_predictive.ipynb
+++ b/Predictive Analytics/Submission/submission_predictive.ipynb
@@ -1243,6 +1243,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5108c8c",
+   "metadata": {},
+   "source": [
+    "Pada pencarian **GridSearch**, model ***RandomForest*** mendapatkan akurasi tertinggi pada tahap pencarian parameter yaitu diangka `0.9950`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2fb5579b",
    "metadata": {},
    "source": [
@@ -1357,8 +1365,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2740888",
+   "metadata": {},
+   "source": [
+    "Hasil evaluasi juga menunjukkan model ***RandomForest*** berhasil unggul dari model yang lain. Walau begitu, ***KNN*** dan ***LogisticRegression*** juga menunjukkan akurasi yang tinggi (+0.9)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "17808501",
    "metadata": {},
    "outputs": [
@@ -1473,24 +1489,23 @@
     }
    ],
    "source": [
-    "# Dictionary of models\n",
     "models = {\n",
     "    'KNN': KNN,\n",
     "    'RandomForest': RF,\n",
     "    'LogisticRegression': LR\n",
     "}\n",
     "\n",
-    "# Plot confusion matrices for each model\n",
+    "# Membuat plot confusion matrix untuk tiap model\n",
     "fig, axes = plt.subplots(1, 3, figsize=(18, 6))\n",
     "\n",
     "for i, (name, model) in enumerate(models.items()):\n",
-    "    # Get predictions\n",
+    "    # Mendapatkan hasil prediksi\n",
     "    y_pred = model.predict(x_test)\n",
     "    \n",
-    "    # Create confusion matrix\n",
+    "    # Menghitung confusion matrix\n",
     "    cm = confusion_matrix(y_test_encoded, y_pred)\n",
     "    \n",
-    "    # Plot heatmap\n",
+    "    # Menampilkan confusion matrix\n",
     "    sns.heatmap(cm, cmap='Blues', ax=axes[i])\n",
     "    axes[i].set_title(f'Confusion Matrix - {name}')\n",
     "    axes[i].set_xlabel('Predicted')\n",
@@ -1505,6 +1520,18 @@
     "    y_pred = model.predict(x_test)\n",
     "    print(f\"\\nClassification Report - {name}\")\n",
     "    print(classification_report(y_test_encoded, y_pred, target_names=label_encoder.classes_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c93dab6b",
+   "metadata": {},
+   "source": [
+    "# Kesimpulan\n",
+    "\n",
+    "Pelatihan yang telah kita lakukan pada proyek ini menunjukkan bahwa ***RandomForest*** memiliki akurasi tertinggi, disusul oleh ***KNN*** dan ***LogisticRegression***. Dengan akurasi pada ***RandomForest*** adalah `0.988636`, KNN `0.970455`, dan LogisticRegression `0.938636`. Ketiga model berhasil menunjukkan akurasi yang cukup tinggi yaitu diatas `0.9`, yang mengindikasikan bahwa data telah berhasil diproses dengan baik, serta proses tuning parameter menggunakan ***GridSearch*** memberikan hasil yang optimal bagi masing-masing model.\n",
+    "\n",
+    "Begitu juga dari hasil visualisasi ***Confusion Matrix***, yang menunjukkan bahwa model mampu melakukan prediksi dengan tingkat kesalahan yang rendah, baik pada data latih maupun data uji. Hal ini terlihat dari banyaknya prediksi yang berada pada diagonal utama, yang menandakan bahwa sebagian besar data berhasil diklasifikasikan dengan benar."
    ]
   },
   {
