--- a/Recommendations System/Submission/submisison_recommendation_system.ipynb
+++ b/Recommendations System/Submission/submisison_recommendation_system.ipynb
@@ -2407,6 +2407,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be5e00c8",
+   "metadata": {},
+   "source": [
+    "Visualisasi menunjukkan bahwa film **Toy Story (1995)** memiliki 3 *genre* yaitu `Comedy, Animation, Children's` dimana film **Aladdin and the King of Thieves (1996)** memiliki 3 *genre* yang sama. Sedangkan film yang lain hanya memiliki 2 *genre* yang sama, maka dari itu *cosine similarity* hanya memiliki score `0.937`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "32282de2",
@@ -2459,6 +2467,14 @@
     "\n",
     "# Memvisualisasikan rekomendasi untuk Toy Story\n",
     "visualize_recommendation(movie_title, you_so_crazy_results, content_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3c5793d",
+   "metadata": {},
+   "source": [
+    "Visualisasi menunjukkan bahwa film **You So Crazy (1994)** memiliki 1 *genre* saja, yaitu `Comedy` dimana semua 10 film memiliki *genre* yang sama. Maka dari itu semua film memiliki score *cosine similarity* `1.0`."
    ]
   },
   {
@@ -2707,6 +2723,14 @@
     "plt.figtext(0.5, 0.01, f\"Early stopping at epoch {best_epoch+1} (best model)\", \n",
     "            ha='center', fontsize=10, bbox=dict(facecolor='yellow', alpha=0.2))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b35ba911",
+   "metadata": {},
+   "source": [
+    "Visualisai di atas menunjukkan performa model Collaborative Filtering dengan nilai *validation RMSE* yang menurun signifikan dari `0.2097` menjadi sekitar `0.1977` dan *validation loss* dari `0.0442` menjadi `0.0398`, mencapai performa optimal pada epoch ke-5 (ditandai dengan titik merah) dari total 10 epoch di mana early stopping diaktifkan, menunjukkan model yang efektif dengan generalisasi baik tanpa tanda-tanda overfitting."
    ]
   },
   {
